* Fixing initialization for more recent Java